# HORARIOS-BACKEND

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dependencies.py  docker-compose.yml  fix_routes.py  main.py  pyproject.toml
app/: dependencies.py
app/api/: auth_routes.py  examen_routes.py  internal_router.py
app/core/: conexion.py  config.py  security.py
app/data/: 706.json  aulas.json  carreras.json  grupos.json  lista.json  periodo=2526A.json
app/models/: classroom.py  course.py  examen.py  professor.py  user.py
app/repositories/: user_repository.py
app/schemas/: examen_schemas.py  horario_schemas.py  user_schemas.py
app/services/: data_loader.py  user_service.py
docs/: API.md  CONSUMER.md
tests/: test_auth.py  test_examenes.py
