[tool.poetry]
name = "horarios-backend"
version = "0.1.0"
description = "API para gestión de exámenes y horarios"
authors = ["isYeibby <sYeibbyS@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.119.1"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
psycopg2-binary = "^2.9.11"
pydantic = "^2.12.3"
python-jose = "^3.5.0"
passlib = "^1.7.4"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
httpx = "^0.28.1"
flake8 = "^7.3.0"
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"